No option trace for launching test

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ env:
   - DB=sqlite
 script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
-  - RAILS_ENV=test bundle exec rake test --trace
+  - RAILS_ENV=test bundle exec rake test
